# Enigmata

./: pyproject.toml
verifiable_tasks/: __init__.py
verifiable_tasks/tasks/: __init__.py
verifiable_tasks/tasks/campsite/: verifier.py
verifiable_tasks/tasks/eight_puzzle/: verifier.py
verifiable_tasks/tasks/fifteen_puzzle/: verifier.py
verifiable_tasks/tasks/nine_puzzle/: verifier.py
