[project]
name = "enigmata"
version = "0.1.0"
description = "Verifiable puzzle tasks for LLM evaluation"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Apache-2.0"}
dependencies = [
    "python-sat",
    "python-constraint",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["verifiable_tasks"]
